WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293136
REGRESSION(
294965@main
): TestWebKitAPI.WebKit.GetUserMediaWithWebThread crashing on iOS Debug
https://bugs.webkit.org/show_bug.cgi?id=293136
Summary
REGRESSION(294965@main): TestWebKitAPI.WebKit.GetUserMediaWithWebThread crash...
Jonathan Bedard
Reported
2025-05-16 11:51:31 PDT
TestWebKitAPI.WebKit.GetUserMediaWithWebThread started crashing upon introduction: TestWebKitAPI.WebKit.GetUserMediaWithWebThread ASSERTION FAILED: isMainThread() /Volumes/Data/worker/Apple-iOS-18-Simulator-Debug-Build/build/Source/WTF/wtf/ObjectIdentifier.cpp(37) : static uint64_t WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>::generateIdentifierInternal() 1 0x11795e9a0 WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>::generateIdentifierInternal() 2 0x14dcc1b94 WTF::ObjectIdentifierGeneric<WebKit::PageGroupIdentifierType, WTF::ObjectIdentifierMainThreadAccessTraits<unsigned long long>, unsigned long long>::generate() 3 0x14dcc1780 WebKit::pageGroupData(WTF::String const&)::$_0::operator()() const 4 0x14dcbc8ec WebKit::pageGroupData(WTF::String const&) 5 0x14dcbc774 WebKit::WebPageGroup::WebPageGroup(WTF::String const&) 6 0x14dcbc718 WebKit::WebPageGroup::WebPageGroup(WTF::String const&) 7 0x14dcbc678 WebKit::WebPageGroup::create(WTF::String const&) 8 0x14deb9440 WebKit::WebProcessPool::WebProcessPool(API::ProcessPoolConfiguration&) 9 0x14deb915c WebKit::WebProcessPool::WebProcessPool(API::ProcessPoolConfiguration&) 10 0x14cc0aad4 void API::Object::constructInWrapper<WebKit::WebProcessPool, API::ProcessPoolConfiguration&>(id<WKObject>, API::ProcessPoolConfiguration&) 11 0x14cc0aa40 -[WKProcessPool _initWithConfiguration:] 12 0x1034dad70 -[TestWKWebView initWithFrame:configuration:processPoolConfiguration:] 13 0x10258c104 TestWebKitAPI::WebKit_GetUserMediaWithWebThread_Test::TestBody() 14 0x1035aabf8 void testing::internal::HandleSehExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 15 0x1035697b4 void testing::internal::HandleExceptionsInMethodIfSupported<testing::Test, void>(testing::Test*, void (testing::Test::*)(), char const*) 16 0x103569704 testing::Test::Run() 17 0x10356a650 testing::TestInfo::Run() 18 0x10356b830 testing::TestSuite::Run() 19 0x1035794dc testing::internal::UnitTestImpl::RunAllTests() 20 0x1035afa8c bool testing::internal::HandleSehExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 21 0x103578e98 bool testing::internal::HandleExceptionsInMethodIfSupported<testing::internal::UnitTestImpl, bool>(testing::internal::UnitTestImpl*, bool (testing::internal::UnitTestImpl::*)(), char const*) 22 0x103578df4 testing::UnitTest::Run() 23 0x1028837c4 RUN_ALL_TESTS() 24 0x102883758 TestWebKitAPI::TestsController::run(int, char**) 25 0x10355d1e4 main 26 0x1058a9410 25 dyld 0x00000001058a9410 start_sim + 20 27 0x105786274 26 ??? 0x0000000105786274 0x0 + 4386742900 Child process terminated with signal 5: Trace/BPT trap
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-16 11:58:45 PDT
<
rdar://problem/151478881
>
Jonathan Bedard
Comment 2
2025-05-16 11:58:46 PDT
This test was failing upon introduction.
Radar WebKit Bug Importer
Comment 3
2025-05-16 11:59:01 PDT
<
rdar://problem/151478982
>
Jonathan Bedard
Comment 4
2025-05-16 16:00:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45522
EWS
Comment 5
2025-05-16 16:57:15 PDT
Test gardening commit
295043@main
(da4e0b9eaec1): <
https://commits.webkit.org/295043@main
> Reviewed commits have been landed. Closing PR #45522 and removing active labels.
youenn fablet
Comment 6
2025-05-20 01:54:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45637
EWS
Comment 7
2025-05-20 12:19:15 PDT
Committed
295171@main
(5c808a0d067c): <
https://commits.webkit.org/295171@main
> Reviewed commits have been landed. Closing PR #45637 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug