REGRESSION(294965@main): TestWebKitAPI.WebKit.GetUserMediaWithWebThread crashing on iOS Debug rdar://151478982 https://bugs.webkit.org/show_bug.cgi?id=293136

Reviewed by Chris Dumez.

On Debug builds, we are hitting main thread assertions in TestWebKitAPI.WebKit.GetUserMediaWithWebThread in WebCore and WebKit code.
While we should fix these assertions, the short term fix for the test is the following:
- Enable web thread in RELEASE builds only
- Add debug asserts that check that audio capture starts only in GPUProcess, where WebThread cannot run.

* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp:
(WebCore::BaseAudioSharedUnit::startProducingData):
* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h:
(WebCore::BaseAudioSharedUnit::allowStarting):
* Source/WebKit/GPUProcess/GPUProcess.cpp:
(WebKit::GPUProcess::GPUProcess):
* Tools/TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
(TestWebKitAPI::(WebKit, GetUserMediaWithWebThread)):
(TestWebKitAPI::(WebKit, GetUserMediaWithWebThread)(WebKit, DISABLED_GetUserMediaWithWebThread)): Deleted.

Canonical link: https://commits.webkit.org/295171@main