Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h
@@ -98,6 +98,10 @@ public:
 
     uint32_t captureDeviceID() const { return m_capturingDevice ? m_capturingDevice->second : 0; }
 
+#if ASSERT_ENABLED
+    void allowStarting() { m_isAllowedToStart = true; }
+#endif
+
 protected:
     BaseAudioSharedUnit();
 
@@ -119,7 +123,6 @@ protected:
 
     void setIsRenderingAudio(bool);
 
-protected:
     void setIsProducingMicrophoneSamples(bool);
     bool isProducingMicrophoneSamples() const { return m_isProducingMicrophoneSamples; }
     void setOutputDeviceID(uint32_t deviceID) { m_outputDeviceID = deviceID; }
@@ -170,6 +173,9 @@ private:
     bool m_isProducingMicrophoneSamples { true };
     Function<void()> m_voiceActivityCallback;
     std::unique_ptr<Timer> m_voiceActivityThrottleTimer;
+#if ASSERT_ENABLED
+    bool m_isAllowedToStart { false };
+#endif
 };
 
 } // namespace WebCore
